# many-shot-residual-geom-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
datasets/games/: generate_game_data.py
datasets/hmm/: generate_hmm_data.py
datasets/othello/: generate_othello_games.py
datasets/synthetic/: generate_synthetic_hmm.py
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: game_playing_transformer_mechanistic_interpretability_Othello_20260320_192423.jsonl  many-shot_in-context_learning_transformer_representations_geometry_20260320_192208.jsonl  matched_papers.json  relevant_papers.json
papers/: README.md
papers/pages/: constrained_belief_updates_geometry_manifest.txt  curved_inference_geometry_manifest.txt  geometry_of_thought_manifest.txt  li_2024_belief_state_geometry_manifest.txt  nanda_2023_emergent_linear_representations_manifest.txt
results/: experiment_results.json
results/models/: mess3_config.json  mess3_weak_config.json  rps_counter_config.json  rps_random_config.json  (+2 more)
src/: analysis.py  extra_analysis.py  model.py  run_experiments.py  train.py
