[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for Many-Shot Residual Stream Geometry"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
